<resources>
    <string name="app_name">PlayAndroids</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="install">install</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="scale_down_show_behavior">json.chao.com.wanandroid.widget.behavior.ScaleDownShowBehavior</string>


    <!--知识体系-->
    <string name="share_view">shareView</string>
    <string name="common_toolbar">开发环境</string>
    <string name="reload">Reload</string>
    <string name="action_share">分享</string>
    <string name="action_open">用系统浏览器打开</string>
    <string name="error_tips">不妙！加载失败了ヽ(≧Д≦)ノ\n 告诉大佬一些可能的原因：\n1.不可直视的网络环境\n 2.服务器大哥的不定期抽风\n 3.WanAndroid眼冒金星拒绝服务喔~</string>

    <!--设置-->
    <string name="setting_normal">通用设置</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>

    <string name="bye_burger_bottom_behavior">com.wingsofts.byeburgernavigationview.ByeBurgerBottomBehavior</string>
    <string name="search">搜索</string>
    <string name="wx_search_guide">带你发现更多干货</string>
    <string name="useWeb">常用网站</string>
    <string name="error">重新加载</string>
    <string name="register_password_hint">输入密码</string>
    <string name="register_account_hint">邮箱/手机号</string>
    <string name="awesome_wan_android">Awesome WanAndroid</string>
    <string name="about_content"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            <br/>\t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/JsonChao/Awesome-WanAndroid" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
    ]]></string>
    <string name="edit_hint_default">发现更多干货</string>
    <string name="clear_all">清除所有</string>
    <string name="history_search">搜索历史</string>
    <string name="search_null_tint">快来搜点干货吧</string>
    <string name="action_search">搜索</string>
    <string name="search_tint">发现更多干货</string>
    <string name="hot_search">热搜</string>

</resources>
