<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/shadow"
    android:orientation="vertical"
    tools:context="jjr.com.playandroids.playandroid_frgment.wechat.AllFragment"
    tools:ignore="MissingDefaultResource">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55">
        <LinearLayout
            android:visibility="gone"
            android:background="@color/colorCard"
            android:id="@+id/wx_before_search"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:src="@drawable/selector_back_arrow" />
            <EditText
                android:textSize="@dimen/dp_14"
                android:drawableLeft="@drawable/ic_search"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:hint="@string/edit_hint_default"
                android:background="@color/colorCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="@dimen/dp_140"
                android:layout_marginTop="@dimen/dp_14"
                android:background="@drawable/wx_search"
                android:textColor="@color/colorText"
                android:textSize="@dimen/dp_13"
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:visibility="visible"
            android:id="@+id/search_after"
            android:background="@color/colorCard"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_gravity="center"
                android:textSize="@dimen/dp_13"
                android:id="@+id/edittext_search"
                android:layout_marginBottom="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:hint="@string/wx_search_guide"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/colorCard"
                android:textCursorDrawable="@drawable/search_cursor"
                android:drawableLeft="@drawable/ic_search"
                android:layout_width="@dimen/dp_270"
                android:layout_height="wrap_content" />
            <TextView

                android:gravity="center"
                android:id="@+id/action_search_wx"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/wx_search"
                android:textColor="@color/colorText"
                android:textSize="@dimen/dp_13"
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlAccentColor="@color/white"
        app:srlPrimaryColor="@color/bule"
        app:srlEnablePreviewInEditMode="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/we_detail_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>